// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | DatePicker Default 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                id="input-id"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | DatePicker Disable certain dates 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                id="disable-dates-input"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | DatePicker Disabled input 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #EBEBE8;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                disabled={true}
                id="disabled-input"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | DatePicker Enable certain dates 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                id="enable-dates-input"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Datepicker Default 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                id="input-id"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Datepicker Disable certain dates 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                id="disable-dates-input"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Datepicker Disabled input 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #EBEBE8;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                disabled={true}
                id="disabled-input"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Datepicker Enable certain dates 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c8:focus {
  border-width: 1px;
}

.c8:hover {
  border-color: #4B4B46;
}

.c8:focus {
  border-color: #0046FF;
}

.c8::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c8::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7 {
  position: relative;
  padding: 0px 0;
}

.c2 {
  z-index: 1;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <label
        className="c3"
        hidden={false}
      >
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            Label 
          </div>
          <span
            className="c6"
          >
            <div
              className="c7"
            >
              <input
                className="NormalizedInput__Input-sc-1m4kmh9-0 c8"
                data-testid="datepicker-input"
                id="enable-dates-input"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd/mm/yyyy"
                type="text"
                value=""
                variant="normal"
              />
              <div
                className="c9 c10"
                position="right"
                variant="normal"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 3v2h8V3h2v2h4v16H2V5h4V3h2zm12 7H4v9h16v-9zM7 15v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zM7 12v2H5v-2h2zm3 0v2H8v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm3 0v2h-2v-2h2zm1-5H4v1h16V7z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;
